Fix distribution test race (#11691)